2009-03-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed an old bug in compare_nodes (pointed out to me in 2005 but
	never fixed properly...)

2008-08-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 2.62

	* Changed the behaviour of max_depth() so that it returns -1 for
	an empty tree, instead of bailing out with an error (strictly
	speaking max_depth should be undefined...).

2008-08-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 2.61

	* Fixed a bug in max_depth() which would fail on trees with more
	than one head node (thanks to Marc Noirot for pointing this out).

2008-08-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 2.60

	* Fixed several problems with fixed_depth iterators: iterating
	beyond the top node now disabled and operator-- fixed.

2008-07-25  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made 'child()' static.

2008-07-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 2.54

	* Changed size() members to return size_t instead of unsigned int.

	* Changed behaviour of operator++ for leaf_iterator so that it can
	be used in situations where new leaves get added during iteration.
	
2008-06-30  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 2.52

	* Made depth member function static so it can be used independent
	of an actual tree, and added a version with two iterators to
	measure depths relative to a different node.

2008-02-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 2.51

	* Added a top node to leaf_iterators, so that they can be
	instructed to iterate only over the leaves of a given node.

2007-10-19  Kasper Peeters  <kasper@pooh>

	* Released 2.4.

2007-10-18  Kasper Peeters  <kasper@pooh>

	* Added max_depth() members.
	
	* Fixed a bug in begin_fixed() which would fail on 

	       A
              / \
             B   C
            /     \
            D      E
                  / \
                  F G
