@@ -1,3 +1,8 @@
+2009-04-03  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Added a sibling member for quick access to the n-th sibling
+	(thanks to Adam Connell for sending the patch).
+
 2009-03-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Fixed an old bug in compare_nodes (pointed out to me in 2005 but
